--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -19232,6 +19232,8 @@ Request Body:
                     <br>
                     <br>
                     <div class=apiClick>glaccounts?type=1&manualEntriesAllowed=true&usage=1&disabled=false</div>
+                    <br>
+                    <div class=apiClick>glaccounts?fetchRunningBalance=true</div>
                 </div>
                 <div class="method-example">
                     <code class="method-declaration">
@@ -19544,6 +19546,9 @@ GET https://DomainName/api/v1/glaccounts/template?type=1
                     <br>
                     <br>
                     <div class=apiClick>glaccounts/1?fields=name,glCode</div>
+                    <br>
+                    <br>
+                    <div class=apiClick>glaccounts/1?fetchRunningBalance=true</div>
                 </div>
                 <div class="method-example">
                     <code class="method-declaration">
