added holiday status to response

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -9816,7 +9816,12 @@ GET https://DomainName/api/v1/holidays?officeId=1
       2013,
       10,
       26
-    ]
+    ],
+    "status": {
+      "id": 100,
+      "code": "holidayStatusType.pending.for.activation",
+      "value": "Pending for activation"
+    }
 }
 ]
 				</code>
@@ -9923,7 +9928,12 @@ GET https://DomainName/api/v1/holidays/{holidayId}
     2013,
     10,
     26
-  ]
+  ],
+  "status": {
+	  "id": 100,
+	  "code": "holidayStatusType.active",
+	  "value": "Active"
+  }
 }
 				</code>
 			</div>
