MIFOSX-879 correcting documentation issues

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -2503,7 +2503,7 @@ GET https://DomainName/api/v1/clients/{clientId}
 					<br>
 					<div class=apiClick>clients?offset=10&limit=50</div>
 					<br>
-					<div class=apiClick>clients?orderBy=displayName,sortOrder=DESC</div>
+					<div class=apiClick>clients?orderBy=displayName&sortOrder=DESC</div>
 				</div>
 				<div class="method-example">
 					<code class="method-declaration">
@@ -3663,7 +3663,7 @@ GET https://DomainName/mifosng-provider/api/v1/centers/9?associations=groupMembe
 					<br>
 					<div class=apiClick>centers?offset=10&limit=50</div>
 					<br>
-					<div class=apiClick>centers?orderBy=name,sortOrder=DESC</div>
+					<div class=apiClick>centers?orderBy=name&sortOrder=DESC</div>
 				</div>
 				<div class="method-example">
 					<code class="method-declaration">
@@ -4579,7 +4579,7 @@ DELETE groups/2
 					<br>
 					<div class=apiClick>groups?offset=10&limit=50</div>
 					<br>
-					<div class=apiClick>groups?orderBy=name,sortOrder=DESC</div>
+					<div class=apiClick>groups?orderBy=name&sortOrder=DESC</div>
 				</div>
 				<div class="method-example">
 					<code class="method-declaration">
@@ -5473,7 +5473,7 @@ GET https://DomainName/api/v1/loans/{loanId}
 					<br>
 					<div class=apiClick>loans?offset=10&limit=50</div>
 					<br>
-					<div class=apiClick>loans?orderBy=accountNo,sortOrder=DESC</div>
+					<div class=apiClick>loans?orderBy=accountNo&sortOrder=DESC</div>
 				</div>
 				<div class="method-example">
 					<code class="method-declaration">
@@ -20454,7 +20454,7 @@ No Request Body:
 					<br>
 					<div class=apiClick>journalentries?offset=10&limit=50</div>
 					<br>
-					<div class=apiClick>journalentries?orderBy=transactionId,sortOrder=DESC</div>
+					<div class=apiClick>journalentries?orderBy=transactionId&sortOrder=DESC</div>
 					<br>
 					<div class=apiClick>journalentries?runningBalance=true</div>
 					<br>
