Fix for Mifosx-814
Mifos-814 Add User for sendPasswordToEmail false

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -18987,7 +18987,7 @@ GET https://DomainName/api/v1/users/{userId}
 							<td><div class="mifosXHeading2">Mandatory Fields</div></td>
 						</tr>
 						<tr class=alt>
-							<td>username, firstname, lastname, email, officeId, roles</td>
+							<td>username, firstname, lastname, email, officeId, roles, sendPasswordToEmail</td>
 						</tr>
 					</table>
 				</div>
@@ -19005,13 +19005,36 @@ Request body:
     "lastname": "User",
     "email": "whatever@mifos.org",
     "officeId": 1,
-    "roles": [2,3]
+    "roles": [2,3],
+    "sendPasswordToEmail": true
 }
 					</code>
 					<code class="method-response">
 {
     "officeId": 1,
     "resourceId": 11
+}
+					</code>
+					<code class="method-request">
+POST users
+Content-Type: application/json 
+Request body:
+{
+    "username": "newuser",
+    "firstname": "Test",
+    "lastname": "User",
+    "email": "whatever@mifos.org",
+    "officeId": 1,
+    "roles": [2,3],
+    "sendPasswordToEmail": false,
+    "password": "123",
+    "repeatPassword": "123"
+}
+					</code>
+					<code class="method-response">
+{
+    "officeId": 1,
+    "resourceId": 12
 }
 					</code>
 				</div>
