MIFOSX-911 Update Api doc issues

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -2499,7 +2499,7 @@ GET https://DomainName/api/v1/clients/{clientId}
 					<p>Example Requests:</p>
 					<div class=apiClick>clients</div>
 					<br>
-					<div class=apiClick>clients?fields=displayName,officeName,joinedDate</div>
+					<div class=apiClick>clients?fields=displayName,officeName,timeline</div>
 					<br>
 					<div class=apiClick>clients?offset=10&limit=50</div>
 					<br>
@@ -3486,7 +3486,7 @@ PUT centers/8
 Content-Type: application/json 
 Request Body:
 {
-	"name": "First Center (No groups)",
+	"name": "First Center (No groups)"
 }
 					</code>
 					<code class="method-response">
@@ -5853,7 +5853,7 @@ Request Body:
     "interestCalculationPeriodType": 1,
     "transactionProcessingStrategyId": 1,
     "expectedDisbursementDate": "10 Jun 2013",
-    "submittedOnDate": "10 Jun 2013"
+    "submittedOnDate": "10 Jun 2013",
     "linkAccountId" : "1"
 }
 					</code>
